; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_init.c_glfwInitHint.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_init.c_glfwInitHint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }

@_glfwInitHints = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@GLFW_INVALID_ENUM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Invalid init hint 0x%08X\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @glfwInitHint(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %12 [
    i32 128, label %6
    i32 130, label %8
    i32 129, label %10
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* %4, align 4
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfwInitHints, i32 0, i32 0), align 4
  br label %16

8:                                                ; preds = %2
  %9 = load i32, i32* %4, align 4
  store i32 %9, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfwInitHints, i32 0, i32 1, i32 0), align 4
  br label %16

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  store i32 %11, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfwInitHints, i32 0, i32 1, i32 1), align 4
  br label %16

12:                                               ; preds = %2
  %13 = load i32, i32* @GLFW_INVALID_ENUM, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @_glfwInputError(i32 %13, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %14)
  br label %16

16:                                               ; preds = %12, %10, %8, %6
  ret void
}

declare dso_local i32 @_glfwInputError(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
